Always return CHANNEL_LAYOUT_UNSUPPORTED for unsupported layouts.

The old code would sometimes return CHANNEL_LAYOUT_NONE which we
don't handle fallback to guessing the layout for. Instead always
return CHANNEL_LAYOUT_UNSUPPORTED so that we will properly attempt
to guess the channel layout based on channel count.

This is a speculative fix for broken audio on Traktor 2 Audio.

BUG=651172
TEST=none
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2687873006
Cr-Commit-Position: refs/heads/master@{#449831}

Former-commit-id: f062c42d082ebf9c2f2e39ac6683f7755d232ac2